--- a/plist/esign.plist
+++ b/plist/esign.plist
@@ -19,7 +19,7 @@
 <key>needs-shine</key>
 <true/>
 <key>url</key>
-<string>https://rcs-store.github.io/RCS/img/rcs/esign.png</string>
+<string>https://k.top4top.io/p_2480hkarc1.jpg</string>
 </dict>
 </array>
 <key>metadata</key>
